--- a/PootCal/PootCal/CAL/View/Base.lproj/CAL_VC.storyboard
+++ b/PootCal/PootCal/CAL/View/Base.lproj/CAL_VC.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_0" orientation="portrait">
+    <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -21,11 +21,11 @@
             <objects>
                 <viewController storyboardIdentifier="CAL_VC" id="BYZ-38-t0r" customClass="CAL_VC" customModule="PootCal" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="eNe-3U-heU" userLabel="Calendar Stack View">
-                                <rect key="frame" x="16" y="78.5" width="343" height="411.5"/>
+                                <rect key="frame" x="16" y="128" width="343" height="411"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="bottom" translatesAutoresizingMaskIntoConstraints="NO" id="T8x-Mp-lEP" userLabel="MonthYear Stack View">
                                         <rect key="frame" x="0.0" y="0.0" width="343" height="53"/>
@@ -54,49 +54,49 @@
                                         </constraints>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="mon-L5-hi3" userLabel="Days Stack View">
-                                        <rect key="frame" x="0.0" y="58" width="343" height="353.5"/>
+                                        <rect key="frame" x="0.0" y="58" width="343" height="353"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="NxX-hL-D5m" userLabel="Days Stack View">
-                                                <rect key="frame" x="0.0" y="0.0" width="343" height="14.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="343" height="14"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Su" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RDx-S3-ds5">
-                                                        <rect key="frame" x="0.0" y="0.0" width="49" height="14.5"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="49" height="14"/>
                                                         <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="13"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="M" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qh7-we-vBA">
-                                                        <rect key="frame" x="49" y="0.0" width="49" height="14.5"/>
+                                                        <rect key="frame" x="49" y="0.0" width="49" height="14"/>
                                                         <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="13"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="T" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fk8-OI-bvp">
-                                                        <rect key="frame" x="98" y="0.0" width="49" height="14.5"/>
+                                                        <rect key="frame" x="98" y="0.0" width="49" height="14"/>
                                                         <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="13"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="W" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jA2-OS-5wr">
-                                                        <rect key="frame" x="147" y="0.0" width="49" height="14.5"/>
+                                                        <rect key="frame" x="147" y="0.0" width="49" height="14"/>
                                                         <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="13"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Th" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yas-KI-0XA">
-                                                        <rect key="frame" x="196" y="0.0" width="49" height="14.5"/>
+                                                        <rect key="frame" x="196" y="0.0" width="49" height="14"/>
                                                         <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="13"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="F" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QEC-1f-u6j">
-                                                        <rect key="frame" x="245" y="0.0" width="49" height="14.5"/>
+                                                        <rect key="frame" x="245" y="0.0" width="49" height="14"/>
                                                         <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="13"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="S" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Ha-fE-Qxm">
-                                                        <rect key="frame" x="294" y="0.0" width="49" height="14.5"/>
+                                                        <rect key="frame" x="294" y="0.0" width="49" height="14"/>
                                                         <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="13"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -104,7 +104,7 @@
                                                 </subviews>
                                             </stackView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jfT-Z4-SaK" userLabel="Horizontal Line">
-                                                <rect key="frame" x="0.0" y="14.5" width="343" height="1"/>
+                                                <rect key="frame" x="0.0" y="14" width="343" height="1"/>
                                                 <color key="backgroundColor" red="0.45098039215686275" green="0.84705882352941175" blue="0.91764705882352937" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="343" id="QqJ-Kv-SoK"/>
@@ -112,7 +112,7 @@
                                                 </constraints>
                                             </view>
                                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="v8g-mc-vam" customClass="JTAppleCalendarView" customModule="JTAppleCalendar">
-                                                <rect key="frame" x="0.0" y="15.5" width="343" height="338"/>
+                                                <rect key="frame" x="0.0" y="15" width="343" height="338"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="v8g-mc-vam" secondAttribute="height" multiplier="343:338" id="pHx-wo-8R4"/>
@@ -215,6 +215,46 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="133.59999999999999" y="130.88455772113943"/>
+        </scene>
+        <!--Date InfoVC-->
+        <scene sceneID="0Ff-02-i4K">
+            <objects>
+                <viewController id="hG6-HY-bFL" customClass="DateInfo_VC" customModule="PootCal" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3j3-ic-yPg">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kV4-YS-AMg" userLabel="Bottom Background Layer">
+                                <rect key="frame" x="0.0" y="157" width="375" height="510"/>
+                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fRk-JZ-EFP">
+                                <rect key="frame" x="26" y="34" width="325" height="613"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="0.45098039215686275" green="0.84705882352941175" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="dHK-61-XOj" firstAttribute="trailing" secondItem="fRk-JZ-EFP" secondAttribute="trailing" constant="24" id="5MP-w8-65F"/>
+                            <constraint firstItem="fRk-JZ-EFP" firstAttribute="top" secondItem="dHK-61-XOj" secondAttribute="top" constant="14" id="Bpt-3q-I4t"/>
+                            <constraint firstItem="fRk-JZ-EFP" firstAttribute="leading" secondItem="dHK-61-XOj" secondAttribute="leading" constant="26" id="L9w-Sz-7NO"/>
+                            <constraint firstItem="dHK-61-XOj" firstAttribute="bottom" secondItem="fRk-JZ-EFP" secondAttribute="bottom" constant="20" id="N04-GI-0NU"/>
+                            <constraint firstItem="kV4-YS-AMg" firstAttribute="top" secondItem="dHK-61-XOj" secondAttribute="top" constant="137" id="XLv-VG-xbh"/>
+                            <constraint firstItem="kV4-YS-AMg" firstAttribute="bottom" secondItem="dHK-61-XOj" secondAttribute="bottom" id="cQy-4e-m65"/>
+                            <constraint firstItem="kV4-YS-AMg" firstAttribute="trailing" secondItem="dHK-61-XOj" secondAttribute="trailing" id="oUu-Sw-Fhy"/>
+                            <constraint firstItem="kV4-YS-AMg" firstAttribute="leading" secondItem="dHK-61-XOj" secondAttribute="leading" id="rJi-Fm-zhN"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="dHK-61-XOj"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Agy-hn-Gfh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1125.5999999999999" y="130.88455772113943"/>
         </scene>
     </scenes>
 </document>
